--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (min-width: 768px) {
+  .hero-background{
+    clip-path: polygon(7vw 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
