--- a/src/components/FAQs/faq.css
+++ b/src/components/FAQs/faq.css
@@ -3,14 +3,19 @@
 }
 .faqs-tab-content {
   max-height: 0;
-  transition: all 0.5s;
+  transition: 0.5s;
 }
+.faqs-tab, .faqs-tab svg {
+  transition-duration: 0.5s;
+}
+
 input:checked + .faqs-tab-label .faqs-test {
-  background-color: #000;
+  background-color: #444;
 }
 input:checked + .faqs-tab-label .faqs-test svg {
+  stroke: white;
+  color: white;
   transform: rotate(180deg);
-  stroke: #fff;
 }
 input:checked + .faqs-tab-label::after {
   transform: rotate(90deg);
