--- a/src/components/Themes/themes.css
+++ b/src/components/Themes/themes.css
@@ -1,133 +1,135 @@
 .problem_body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    color: #ffffff;
-  }
-  
-  .problemContainer {
-    flex-grow: 1;
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 32px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  .cards__item {
-    height: 400px;
-  }
-  
-  .card {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #000000;
-  }
-  .card::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 20;
-    width: 50%;
-    height: 100%;
-    pointer-events: none;
-  }
-  
-  .card__frame {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-  
-  .card__picture {
-    margin-bottom: 12px;
-    filter: invert(1);
-  }
-  .card__picture img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .card__title {
-    margin: 0;
-    font-weight: 700;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-  }
-  
-  .card__overlay {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 52px;
-    height: 52px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    transition: 0.5s;
-    cursor: pointer;
-  }
-  .card__overlay::before {
-    content: "Read";
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 500;
-    letter-spacing: 0.02em;
-  }
-  .card__overlay:hover, .card__overlay:focus {
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: none;
-    border-radius: 0;
-    opacity: 1;
-  }
-  .card__overlay:hover::before, .card__overlay:focus::before {
-    content: none;
-  }
-  
-  .card__content {
-    z-index: 1;
-    padding: 20px;
-    line-height: 1.4;
-    opacity: 1;
-    color: black;
-    visibility: hidden;
-    box-sizing: border-box;
-    pointer-events: none;
-    transition: 0s;
-  }
-  .card__overlay:hover ~ .card__content {
-    opacity: 1;
-    visibility: visible;
-    transition: 0.2s 0.3s;
-  }
-  .card__content h2 {
-    margin: 0;
-    margin-bottom: 16px;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  color: #ffffff;
+}
+
+.problemContainer {
+  flex-grow: 1;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 32px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.cards__item {
+  height: 400px;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #000000;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  width: 50%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.card__frame {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.card__picture {
+  margin-bottom: 12px;
+  filter: invert(1);
+}
+.card__picture img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.card__title {
+  margin: 0;
+  font-weight: 700;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+}
+
+.card__overlay {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 52px;
+  height: 52px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  cursor: pointer;
+}
+.card__overlay::before {
+  content: "Read";
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+}
+.card__overlay:hover,
+.card__overlay:focus {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: none;
+  border-radius: 0;
+  opacity: 1;
+}
+.card__overlay:hover::before,
+.card__overlay:focus::before {
+  content: none;
+}
+
+.card__content {
+  z-index: 1;
+  padding: 20px;
+  line-height: 1.4;
+  opacity: 1;
+  color: black;
+  visibility: hidden;
+  box-sizing: border-box;
+  pointer-events: none;
+  transition: 0s;
+}
+.card__overlay:hover ~ .card__content {
+  opacity: 1;
+  visibility: visible;
+  transition: 0.2s 0.3s;
+}
+.card__content h2 {
+  margin: 0;
+  margin-bottom: 16px;
+}
