--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -39,21 +39,23 @@
   }
 }
 #discord {
-  background-color: #7289da;
+  background-color: #414141;
+  
 }
 
 #facebook {
-  background-color: darkslateblue;
+  background-color: #2c2c2c;
+  
 }
 
 #twitter {
-  background-color: #1da1f2;
+  background-color: #414141;
 }
 
 #instagram {
-  background-color: #e1306c;
+  background-color: #2c2c2c;
 }
 
 #linkedin {
-  background-color: #0077b5;
+  background-color: #414141;
 }
