--- a/src/components/Milestone/milestones.css
+++ b/src/components/Milestone/milestones.css
@@ -1,16 +1,17 @@
 .milestones-block1{
-    background: linear-gradient(
-      135deg, rgb(255, 196, 29), rgb(185, 140, 10));
+    background: linear-gradient(135deg, #eea849, #f46b45);
+    
 }
 
 .milestones-block2{
-    background: linear-gradient(135deg, rgb(113, 160, 206), rgb(58, 123, 213));
+    background: linear-gradient(135deg, rgb(156, 195, 233), rgb(44, 56, 221));
 }
 
 .milestones-block3{
-    background: linear-gradient(135deg, rgb(143, 169, 99), rgb(100, 139, 35));
+    background: linear-gradient(135deg, rgb(159, 206, 83), #03722e);
 }
 
 .milestones-block4{
-    background: linear-gradient(135deg, rgb(231, 137, 103), rgb(202, 80, 36));
+    background: linear-gradient(135deg, rgb(255, 216, 110), rgb(185, 124, 10));
+    
 }
