--- a/src/components/Schedule/schedule.css
+++ b/src/components/Schedule/schedule.css
@@ -1,16 +1,16 @@
 .schedule-block1{
     background: linear-gradient(
-      135deg, rgb(255, 196, 29), rgb(185, 140, 10));
+      135deg, #64b3f4, #c2e59c);
 }
 
 .schedule-block2{
-    background: linear-gradient(135deg, rgb(113, 160, 206), rgb(58, 123, 213));
-}
-
-.schedule-block3{
-    background: linear-gradient(135deg, rgb(143, 169, 99), rgb(100, 139, 35));
+    background: linear-gradient(135deg, #60b4ec, #0a76e2);
 }
 
 .schedule-block4{
+    background: linear-gradient(135deg, #eea849, #f46b45);
+}
+
+.schedule-block3{
     background: linear-gradient(135deg, rgb(231, 137, 103), rgb(202, 80, 36));
 }
