--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,9 @@ code {
   clip-path: polygon(7vw 0, 100% 0, 100% 100%, 0 100%);
   /* transform: translate(4.2rem, 0); */
 }
-/* } */
+.track-text-outline{
+  float: left;
+  opacity: 0;
+  shape-outside: polygon(0 0, 0 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 0 0, 100% 100%, 0 100%);
+}
