--- a/src/colors.css
+++ b/src/colors.css
@@ -26,7 +26,7 @@ body {
   color:aliceblue
 }
 .nav-theme{
-  background-color: rgba(15, 15, 20);
-  @apply md:opacity-80;
+  background-color: rgb(38, 38, 46);                                              
+  @apply md:opacity-90;
   border-bottom: 1px solid white;
 }
