--- a/src/colors.css
+++ b/src/colors.css
@@ -30,3 +30,81 @@ body {
   @apply md:opacity-90;
   border-bottom: 1px solid white;
 }
+.xl3{font-size: 1.875rem !important; 
+  font-family: 'Poppins', sans-serif;
+  font-weight: 351 !important;
+  
+   /* font-family: 'Montserrat', sans-serif; */
+}
+.sponsor-bg-title{
+
+/* background-color:hsla(191, 100%, 68%, 0.6);  */
+
+
+/* 
+background: linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(169, 82%, 56%, 0.6) 100%);
+
+background: -moz-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(169, 82%, 56%, 0.6) 100%);
+
+background: -webkit-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(169, 82%, 56%, 0.6) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#221E1E", endColorstr="#34EBC9", GradientType=1 ); */
+
+background: hsla(0, 6%, 13%, 1);
+
+background: linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(191, 57%, 69%, 0.6) 100%);
+
+background: -moz-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(191, 57%, 69%, 0.6) 100%);
+
+background: -webkit-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(191, 57%, 69%, 0.6) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#221E1E", endColorstr="#82CCDD", GradientType=1 );
+}
+
+.sponsor-bg-0{
+  /* background-color: hsla(43, 74%, 49%, 0.6); */
+    /* background: hsla(0, 6%, 13%, 1);
+
+  background: linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(43, 74%, 49%, 0.6) 100%);
+  
+  background: -moz-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(43, 74%, 49%, 0.6) 100%);
+  
+  background: -webkit-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(43, 74%, 49%, 0.6) 100%);
+  
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#221E1E", endColorstr="#DAA520", GradientType=1 ); */
+  background: hsla(0, 6%, 13%, 1);
+
+background: linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(41, 99%, 67%, 0.6) 100%);
+
+background: -moz-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(41, 99%, 67%, 0.6) 100%);
+
+background: -webkit-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(41, 99%, 67%, 0.6) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#221E1E", endColorstr="#FECA57", GradientType=1 );
+}
+
+.sponsor-bg-1{  
+  /* background-color:hsla(0, 0%, 66%, 0.6) ; */
+  background: hsla(0, 6%, 13%, 1);
+
+  background: linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(0, 0%, 66%, 0.6) 100%);
+  
+  background: -moz-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(0, 0%, 66%, 0.6) 100%);
+  
+  background: -webkit-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(0, 0%, 66%, 0.6) 100%);
+  
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#221E1E", endColorstr="#A9A9A9", GradientType=1 );
+}
+
+.sponsor-bg-2{
+  /* background-color: hsla(30, 61%, 40%, 0.6); */
+  background: hsla(0, 6%, 13%, 1);
+
+background: linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(30, 61%, 40%, 0.6) 100%);
+
+background: -moz-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(30, 61%, 40%, 0.6) 100%);
+
+background: -webkit-linear-gradient(135deg, hsla(0, 6%, 13%, 0) 0%, hsla(30, 61%, 40%, 0.6) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#221E1E", endColorstr="#A46628", GradientType=1 );
+}
