--- a/src/components/Themes/themes.css
+++ b/src/components/Themes/themes.css
@@ -8,16 +8,16 @@
   background: linear-gradient(135deg, rgb(159, 206, 83), #03722e 50%);
 }
 .theme-block3{
-  background: linear-gradient(135deg, #FFC11F, #F33C04 40%,#DA1F05 50% );
-}
-.theme-block4{
   background: linear-gradient(135deg, #9f8ac2, #05fc89);
 }
+.theme-block4{
+  background: linear-gradient(135deg, #FFC11F, #F33C04 40%,#DA1F05 50% );
+}
 .theme-block5{
-  background: linear-gradient(135deg, #FFF75D, #FFC11F 50%);
+  background: linear-gradient(346deg, #336bef, #37f69a);
 }
 .theme-block6{
-  background: linear-gradient(135deg,rgb(165, 168, 167), rgb(240, 232, 235) 70%); 
+  background: linear-gradient(135deg, #FFF75D, #FFC11F 50%);
 }
 .clip-class-theme{
   background-color: rgba(34, 30, 30);
