--- a/src/colors.css
+++ b/src/colors.css
@@ -8,6 +8,10 @@ body {
   @apply my-4 py-8 md:my-12 md:p-12;
   
 }
+.counter-cell{
+  background-color: rgba(34, 30, 30, 0.83);
+  border-radius: 10px;
+}
 
 .header-theme {
   color: rgb(255, 255, 255);
