--- a/src/colors.css
+++ b/src/colors.css
@@ -40,6 +40,10 @@ body {
   }                                             
 }
 
+.activeColor{
+  background-color: rgba(11, 11, 11, 0.5);
+}
+
 .xl3{
   font-family: 'Poppins', sans-serif;
   font-weight: 351 !important;
