edit themes, title sponsor

--- a/src/components/Themes/themes.css
+++ b/src/components/Themes/themes.css
@@ -15,11 +15,11 @@
 }
 
 .theme-block4 {
-  background: linear-gradient(135deg, #FFC11F, #F33C04 40%, #DA1F05 50%);
+  background: linear-gradient(135deg, #ffc01fe3, #f33c04cb 40%, #d72109ca 50%);
 }
 
 .theme-block5 {
-  background: linear-gradient(346deg, #336bef, #37f69a);
+  background: linear-gradient(346deg, #336bef, #41f8a0);
 }
 
 .theme-block6 {
