Styling updates - Remove redundant styling - Mobile styling fixes - CNAME fixes
Signed-off-by: Avishrant Sharma <avishrants@gmail.com>

--- a/src/components/Timeline_new/timeline.modules.css
+++ b/src/components/Timeline_new/timeline.modules.css
@@ -177,7 +177,8 @@
         box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25), 0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
       }
       .timeline__event__title {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        margin-bottom: 10px;
         line-height: 1.4;
         text-transform: uppercase;
         font-weight: 600;
@@ -188,7 +189,8 @@
         width: auto;
       }
       .timeline__event__date {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        padding: 10px 0;
         font-weight: 600;
         width: auto;
         border-radius: 0;
